--- a/src/estilos.css
+++ b/src/estilos.css
@@ -3,10 +3,6 @@
     padding: 0;
 }
 
-body{
-background-image: url(https://us.123rf.com/450wm/nicemonkey/nicemonkey0911/nicemonkey091100036/5890497-oscuridad-cepillado-de-metal-con-orificio-redondo-pu%C3%B1etazos-en-ella.jpg?ver=6);
-}
-
 header {
     border: solid black 2px;
     display: flex;
@@ -49,6 +45,13 @@ main div {
     margin-bottom: 0.5rem;
 }
 
+.btnAgregar{
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+
+
 /* --------------------------------- BOMBAS --------------------------------- */
 #bombasDeAgua {
     margin-bottom: 6px;
@@ -61,7 +64,7 @@ main div {
 
 #bombas div {
     margin-left: 5px;
-    height: 14rem;
+    height: 21rem;
     width: 14rem;
     border: solid black 1px;
     border-radius: 1px;
