--- a/src/estilos.css
+++ b/src/estilos.css
@@ -3,6 +3,8 @@
     padding: 0;
 }
 
+/* -------------------------------- NAVEGADOR ------------------------------- */
+
 header {
     border: solid black 2px;
     display: flex;
@@ -31,7 +33,7 @@ header nav a {
 
 
 
-main {
+.general {
     border: black solid 2px;
     background-color: rgb(184, 78, 29);
     display: flex;
@@ -50,22 +52,10 @@ main div {
     margin-bottom: 5px;
 }
 
-
-
-/* --------------------------------- BOMBAS --------------------------------- */
-#bombasDeAgua {
-    margin-bottom: 6px;
-}
-
-#bombas {
-    display: flex;
-    flex-direction: row;
-}
-
-#bombas div {
+.prod {
     margin-left: 5px;
-    height: 21rem;
-    width: 14rem;
+    height: 25rem;
+    width: 16rem;
     border: solid black 1px;
     border-radius: 1px;
     display: flex;
@@ -74,49 +64,10 @@ main div {
     align-items: center;
     justify-content: center;
     background-color: gray;
+    margin-bottom: 3rem;
+    margin-top: 3rem;
 }
 
-/* ------------------------------- FERRETERIA ------------------------------- */
-
-#ferreteria1 {
-    display: flex;
-    flex-direction: row;
-}
-
-#ferreteria1 div {
-    margin-left: 5px;
-    height: 21rem;
-    width: 14rem;
-    border: solid black 1px;
-    border-radius: 1px;
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    align-items: center;
-    justify-content: center;
-    background-color: gray;
-}
-
-/* -------------------------------- CAÑERIAS -------------------------------- */
-
-#cañerias1 {
-    display: flex;
-    flex-direction: row;
-}
-
-#cañerias1 div {
-    margin-left: 5px;
-    height: 21rem;
-    width: 14rem;
-    border: solid black 1px;
-    border-radius: 1px;
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    align-items: center;
-    justify-content: center;
-    background-color: gray;
-}
 
 /* --------------------------------- FOOTER --------------------------------- */
 
