--- a/src/estilos.css
+++ b/src/estilos.css
@@ -54,8 +54,8 @@ main div {
 
 .prod {
     margin-left: 5px;
-    height: 33rem;
-    width: 20rem;
+    height: 19rem;
+    width: 15rem;
     border: solid black 1px;
     border-radius: 1px;
     display: flex;
@@ -66,12 +66,27 @@ main div {
     background-color: gray;
     margin-bottom: 3rem;
     margin-top: 3rem;
+    border-radius: 5%;
 }
 
 .imagenes{
     height: 8rem;
     width: 8rem;
 }
+
+.itemDetalle{
+    background-color: aqua;
+    border-radius: 3px;
+    border: solid black 1px ;
+}
+
+.buttonDetalle{
+    background-color: rgb(51, 56, 56);
+    border: 1px solid black;
+    border-radius: 2px;
+    color: white;
+}
+
 
 /* --------------------------------- FOOTER --------------------------------- */
 
