--- a/src/estilos.css
+++ b/src/estilos.css
@@ -72,6 +72,8 @@ main div {
 .imagenes{
     height: 8rem;
     width: 8rem;
+    border: solid 2px black;
+    border-radius: 5%;
 }
 
 .itemDetalle{
